# agent-flow

./: .env.gpg  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONCEPT.md  LEARNINGS.md  README.md  bootstrap.sh
.claude/: memory.md  profile.md
.claude-plugin/: marketplace.json
.claude/lessons/: flow.md
.claude/metrics/: baseline.json
agents/: architekt.md  cicd.md  coder.md  dba.md  designer.md  estimator.md  red-team.md  regression-define.md  regression-heal.md  requirement.md  retro.md  reviewer.md  tester.md  train.md
board/: areas.schema.json  areas.yaml  board.yaml  feature.schema.json  fragenkatalog.schema.json  id-reservations.yaml  story.schema.json
board/features/: F-001-board-schema.yaml  F-002-estimate-at-creation.yaml  F-004-train-multi-pack.yaml  (+31 more)
docs/: glossary.md  ideas-inbox.md
knowledge/: angular.md  architecture.md  cicd.md  css.md  flutter.md  html.md  java.md  js.md  model-tiers.md  mongodb.md  python.md  security.md  sql-mysql.md  sql-sqlite.md  sql.md  tailwind.md  ts.md  ui.md  web3-evm.md
scripts/: _lib.sh  board  board-feature-drain.sh  board-github-export  board-id-reserve.sh  board-lint.sh  board-plan-validate.sh  board-ship.sh  encrypt-env.sh  ensure-gh-auth.sh  load-env.sh  metrics-aggregate.sh  metrics-append-dispatch.sh  metrics-append-item.sh  metrics-collect.sh  obsidian-fragenkatalog-validate.sh  pm-intake-gate.py  provision-gpg-pass.sh  reconcile-stage2-gate.sh  setup-bw-items.sh  shape  spec-audit-append.sh  verify-secrets.sh
templates/python/: Dockerfile  profile.md  pyproject.toml  security_headers.py
(+525 files in other folders)
